--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   },
   "homepage": "https://github.com/ccny-wd-2020/basics_website#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-pg-simple": "^6.2.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
