--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "basics_website",
   "version": "1.0.0",
-  "description": "- Website that I created as a how to guide for certain web development processes.",
+  "description": "Website that I created as a how to guide for certain web development processes.",
   "main": "index.js",
   "scripts": {
     "start": "env APP_ENV=dev node back-end/server.js",
@@ -22,7 +22,6 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "connect-pg-simple": "^6.2.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
